# Square-GSPro-Automation

./: .gitignore  README.md  main.py  pyproject.toml
